--- a/projectServis/src/css/style.css
+++ b/projectServis/src/css/style.css
@@ -15,12 +15,29 @@ body {
   font-family: "Roboto Condensed";
 }
 
+.cont1 {
+  background-color: rgba(0, 0, 0, 0.475);
+  position: relative;
+}
+
+.cont {
+  height: 100px;
+  position: fixed;
+  width: 100%;
+  background: url("/mainProject/src/img/bgMainDark.jpg");
+  z-index: 3;
+}
+
 .header {
-  background: url("http://arbitrium.org.ru/wp-content/uploads/2021/08/city-5716456-scaled.jpg");
+  background: url("/mainProject/src/img/bgMainDark.jpg");
 }
 .header_dark {
-  background-color: rgba(0, 0, 0, 0.475);
   padding-bottom: 110px;
+}
+.header #navigation {
+  position: fixed;
+  z-index: 4;
+  width: 1350px;
 }
 .header__contacts {
   text-align: end;
@@ -35,7 +52,7 @@ body {
   color: #ffffff;
 }
 .header__info {
-  margin-top: 3px;
+  padding-top: 60px;
   text-align: center;
 }
 .header__info-title {
@@ -100,22 +117,19 @@ body {
   width: 44px;
   height: 43px;
 }
-.header-nav-lupa {
-  color: white;
-  margin-left: 15px;
+.header-nav__logo {
+  text-decoration: none;
+  color: #ffffff;
+  position: relative;
 }
-.header-nav-tg {
-  background: #0088CC;
-  border-radius: 95px;
-  text-align: center;
-  font-size: 15px;
-  width: 45px;
-  height: 45px;
-  padding-top: 11px;
-  margin-left: 16px;
-}
-.header-nav-tg-1 {
-  color: #fff;
+.header-nav__text {
+  text-decoration: none;
+  font-size: 30px;
+  color: #ffffff;
+  display: inline-block;
+  position: absolute;
+  bottom: 10px;
+  font-weight: 600;
 }
 .header-nav__menu {
   display: -webkit-box;
@@ -137,6 +151,71 @@ body {
   color: #ffffff;
   text-decoration: none;
   margin-left: 20px;
+}
+.header-nav__menu-item:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+ul {
+  list-style: none;
+  position: relative;
+  color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+ul li {
+  text-align: center;
+  font-size: 10px;
+  color: #ffffff;
+}
+
+ul li a {
+  text-decoration: none;
+  color: #ffffff;
+  display: block;
+  text-align: left;
+}
+
+ul li ul {
+  background-color: rgba(150, 21, 21, 0.6588235294);
+  margin-left: 20px;
+  position: absolute;
+  width: 400px;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+
+ul li a:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+ul li ul li {
+  display: none;
+  margin-bottom: 5px;
+  padding-top: 5px;
+  padding-left: 10px;
+  color: #ffffff;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+}
+
+ul li:hover ul li {
+  display: block;
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
+
+#down {
+  padding-bottom: 2px;
 }
 
 .home {
@@ -205,6 +284,89 @@ body {
   text-decoration: none;
   padding-bottom: 15px;
   color: #1E1E20;
+}
+
+.gallery-grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.grid-item {
+  overflow: hidden;
+  padding: 15px;
+  width: 33.33%;
+}
+
+.grid-item__inner {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  overflow: hidden;
+}
+
+.grid-item__img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.grid-item__inner:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(6, 50, 195, 0.437);
+  z-index: 2;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+  opacity: 0;
+}
+
+.grid-item__inner:hover:before {
+  opacity: 1;
+}
+
+.grid-item__tittle {
+  position: absolute;
+  left: 10px;
+  bottom: 50px;
+  font-size: 24px;
+  color: rgb(255, 255, 255);
+  z-index: 2;
+}
+
+.grid-item__inner:hover .grid-item__img {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.grid-item__tittle {
+  display: block;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
+  -webkit-transition: -webkit-transform 0.4s ease;
+  transition: -webkit-transform 0.4s ease;
+  transition: transform 0.4s ease;
+  transition: transform 0.4s ease, -webkit-transform 0.4s ease;
+}
+
+.grid-item__inner:hover .grid-item__tittle {
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
 }
 
 .map {
