--- a/projectServis/src/scss/header.scss
+++ b/projectServis/src/scss/header.scss
@@ -1,10 +1,32 @@
+.cont1{
+    background-color: rgba(0, 0, 0, 0.475);
+    position: relative;
+}
+.cont{
+    height: 100px;
+    position: fixed;
+    width: 100%;
+    background: url('/mainProject/src/img/bgMainDark.jpg');
+    z-index: 3;
+    
+}
 .header {
-    background: url('http://arbitrium.org.ru/wp-content/uploads/2021/08/city-5716456-scaled.jpg');
+    background: url('/mainProject/src/img/bgMainDark.jpg');
+    
     &_dark{
-        background-color: rgba(0, 0, 0, 0.475);
+        
         padding-bottom: 110px;
+        
+    }
+    #navigation{
+        position: fixed;
+        z-index: 4;
+        width: 1350px;
+        
+        
     }
     &__contacts{
+        
         text-align: end;
         font-family: "Open Sans",sans-serif;
         font-weight: 500;
@@ -18,7 +40,7 @@
         
     }
     &__info {
-        margin-top: 3px;
+        padding-top: 60px;
         text-align: center;
         &-title{
             color: #FFF;
@@ -73,26 +95,19 @@
             width: 44px;
             height: 43px;
         }
-        &-lupa{
-            color: white;
-            margin-left: 15px;
+        &__logo{
+            text-decoration: none;
+            color: #ffffff;
+            position: relative;
         }
-        &-tg{
-            
-            &-1{
-                color: #fff; 
-                
-            }
-            background: #0088CC;
-            border-radius: 95px;
-            text-align: center;
-            font-size: 15px;
-            width: 45px;
-            height: 45px;
-            padding-top: 11px;
-            margin-left: 16px;
-            
-            
+        &__text{
+            text-decoration: none;
+            font-size: 30px;
+            color: #ffffff;
+            display: inline-block;
+            position: absolute;
+            bottom: 10px;
+            font-weight: 600;
         }
         &__menu {
             display: flex;
@@ -112,7 +127,63 @@
                 margin-left: 20px;
 
             }
+            &-item:hover {
+                text-decoration-line: underline;
+                
+
+            }
         }
     }
 }
  
+ul{
+    list-style: none;
+    position: relative;
+    color: #ffffff;
+    display: flex;
+    flex-wrap: wrap;
+}
+ul li{
+    text-align: center;
+    font-size: 10px;
+    color: #ffffff;
+    
+}
+
+ul li a{
+    text-decoration: none;
+    color: #ffffff;
+    display: block;
+    text-align: left;
+}
+ul li ul{
+    background-color: #961515a8;
+    margin-left: 20px;
+    position: absolute;
+    width: 400px;
+    height: max-content;
+    
+}
+
+ul li a:hover{
+    text-decoration-line: underline;
+}
+ul li ul li{
+    display: none;
+    margin-bottom: 5px;
+    padding-top: 5px;
+    padding-left: 10px;
+    color: #ffffff;
+    transition: all .4s ease;
+    transform: translateY(-10px);
+}
+ul li:hover ul li{
+    display: block;
+    
+    transform: translateY(0px);
+    
+}
+
+#down{
+    padding-bottom: 2px;
+}
