--- a/projectServis/src/scss/home.scss
+++ b/projectServis/src/scss/home.scss
@@ -64,3 +64,70 @@
     }
 }
 
+
+
+.gallery-grid{
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.grid-item{
+  overflow: hidden;
+  
+  padding: 15px;
+  width: 33.33%;
+}
+.grid-item__inner{
+  position: relative;
+  display: flex;
+  height: 100%;
+  overflow: hidden;
+  
+}
+.grid-item__img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+    transition: all .4s ease;
+
+}
+.grid-item__inner:before{
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(6, 50, 195, 0.437);
+  z-index: 2;
+  transition: all .4s ease;
+  opacity: 0;
+
+}
+
+.grid-item__inner:hover:before{
+  opacity: 1;
+   
+}
+.grid-item__tittle{
+  position: absolute;
+  left: 10px;
+  bottom: 50px;
+  font-size: 24px;
+  color: rgb(255, 255, 255);
+  z-index: 2;
+}
+.grid-item__inner:hover .grid-item__img{
+  transform: scale(1.3);
+  object-fit: cover;
+}
+.grid-item__tittle{
+  display: block;
+  transform: translateY(30px) ;
+  transition: transform .4s ease;
+}
+.grid-item__inner:hover .grid-item__tittle{
+  transform: translateY(-5px);
+}
