--- a/src/css/style.css
+++ b/src/css/style.css
@@ -372,28 +372,51 @@ ul li:hover ul li {
           transform: scaleY(1);
 }
 
+.arrow-wrap {
+  text-align: center;
+  max-width: 25%;
+  margin: 0 auto;
+}
+
+.arrow {
+  max-width: 25%;
+  margin: 30px;
+  -webkit-transition: all 0.4 ease;
+  transition: all 0.4 ease;
+  cursor: pointer;
+}
+
+.rotate {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  -webkit-transition: all 0.4 ease;
+  transition: all 0.4 ease;
+}
+
 .map {
   margin-top: 65px;
 }
 
 .footer {
+  position: relative;
   padding-top: 10px;
-  background: #010000;
+  background: #244f67;
 }
-.footer__info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-bottom: 10px;
-}
-.footer__info_img {
-  margin-right: 12px;
+.footer__copyright {
+  position: absolute;
+  background: #1b3c4d;
   width: 100%;
+  height: 50px;
+  text-align: center;
+  font-size: 15px;
+  color: #fff;
+  line-height: 2;
+  padding-top: 10px;
 }
 .footer__info_text {
+  margin: 15px 0;
+  padding: 0 15px;
+  width: 33%;
   margin-top: 30px;
   text-align: center;
   margin-left: 12px;
@@ -402,8 +425,21 @@ ul li:hover ul li {
 }
 .footer__info_text-item {
   font-size: 15px;
-  color: #FFF;
+  color: #fff;
   line-height: 2;
+}
+
+.footer__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+}
+.footer__inner-item {
+  margin: 20px;
+}
+.footer__inner-item_img-img {
+  max-width: 300px;
 }
 
 .reviews {
@@ -444,6 +480,70 @@ ul li:hover ul li {
   max-height: 540px;
 }
 
+.slider1 {
+  height: 550px;
+  margin: auto;
+  position: relative;
+  width: 90%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+  padding-bottom: 20px;
+}
+
+.slide-track1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 55000px;
+  -webkit-animation: scroll 15s linear infinite;
+          animation: scroll 15s linear infinite;
+}
+
+.slide-track1:hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+
+.slide1 {
+  height: 550px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px;
+  -webkit-perspective: 100px;
+          perspective: 100px;
+}
+
+@-webkit-keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-2340px);
+            transform: translateX(-2340px);
+  }
+}
+
+@keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-2340px);
+            transform: translateX(-2340px);
+  }
+}
+.tasks {
+  padding-bottom: 50px;
+}
 .tasks__title {
   text-align: center;
   color: #1E1E20;
@@ -499,11 +599,54 @@ ul li:hover ul li {
   font-size: 80px;
 }
 
-#owlimg {
-  display: block;
-  max-width: 150px;
+.slider {
+  height: 150px;
+  margin: auto;
+  position: relative;
+  width: 90%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+  padding-bottom: 20px;
 }
 
+.slide-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 1950px;
+  -webkit-animation: scroll 15s linear infinite;
+          animation: scroll 15s linear infinite;
+}
+
+.slide-track:hover {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
+}
+
+.slide {
+  max-height: 150px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px;
+}
+
+@keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-2340px);
+            transform: translateX(-2340px);
+  }
+}
 .consultation {
   margin-top: 60px;
   text-align: center;
