--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,26 +1,46 @@
-.footer{
-    
+.footer {
+    position: relative;
+    &__copyright {
+        position: absolute;
+        background: #1b3c4d;
+        width: 100%;
+        height: 50px;
+        text-align: center;
+        font-size: 15px;
+        color: #fff;
+        line-height: 2;
+        padding-top: 10px;
+    }
     padding-top: 10px;
-    background:#010000 ;
-    
-    &__info{
-        display: flex;
-        justify-content: center;
-        padding-bottom: 10px;
-        &_img{
-            margin-right: 12px;
-            width: 100%;
-        }
-        &_text{
+    background: #244f67;
+
+    &__info {
+        &_text {
+            margin: 15px 0;
+            padding: 0 15px;
+            width: 33%;
             margin-top: 30px;
             text-align: center;
             margin-left: 12px;
             font-size: 15px;
             font-weight: 900;
-            &-item{
+            &-item {
                 font-size: 15px;
-            color: #FFF;
-            line-height: 2;
+                color: #fff;
+                line-height: 2;
+            }
+        }
+    }
+}
+
+.footer__inner {
+    display: flex;
+    overflow: hidden;
+    &-item {
+        margin: 20px;
+        &_img {
+            &-img {
+                max-width: 300px;
             }
         }
     }
