--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -137,6 +137,21 @@
       transform: scaleY(1);
   }
 }
-// .less{
-//   display: none;
-// }
+
+.arrow-wrap{
+text-align: center;
+max-width: 25% ;
+margin: 0 auto;
+
+}
+.arrow{
+max-width: 25%;
+ margin: 30px;
+transition: all .4 ease;
+cursor: pointer;
+}
+
+.rotate{
+  transform: rotate(180deg);
+  transition: all .4 ease;
+}
