--- a/src/scss/reviews.scss
+++ b/src/scss/reviews.scss
@@ -37,4 +37,43 @@
             
         }
     }
+    
 }
+
+
+.slider1{
+    height: 550px;
+    margin: auto;
+    position: relative;
+    width: 90%;
+    display: grid;
+    place-items: center;
+    overflow: hidden;
+    padding-bottom: 20px;
+  }
+  
+  .slide-track1{
+    display: flex;
+    width: calc(550px *100);
+    animation: scroll 15s linear infinite;
+  }
+  .slide-track1:hover{
+   animation-play-state: paused;
+  }
+  .slide1{
+    height: 550px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    perspective: 100px;
+  }
+  @keyframes scroll{
+    0%{
+      transform: translateX(0);
+    }
+    100%{
+      transform: translateX(calc(-130px*18));
+    }
+  }
+  
