--- a/src/css/style.css
+++ b/src/css/style.css
@@ -393,8 +393,167 @@ ul li:hover ul li {
   transition: all 0.4 ease;
 }
 
-.map {
-  margin-top: 65px;
+.map__cont_main {
+  position: relative;
+  margin-top: 50px;
+}
+.map__cont_main-img {
+  width: 100%;
+}
+.map__cont_main-img1 {
+  position: absolute;
+  top: 54%;
+  left: 52%;
+  width: 7%;
+}
+.map__cont_main-img1:hover {
+  width: 9%;
+}
+.map__cont_main-img2 {
+  position: absolute;
+  top: 55%;
+  right: 30%;
+  width: 7%;
+}
+.map__cont_main-img2:hover {
+  right: 29%;
+  width: 9%;
+}
+.map__cont_main-img3 {
+  position: absolute;
+  top: 70%;
+  left: 51%;
+  width: 9%;
+}
+.map__cont_main-img3:hover {
+  left: 50%;
+  width: 11%;
+}
+.map__cont_main-img4 {
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  width: 7%;
+}
+.map__cont_main-img4:hover {
+  width: 9%;
+}
+.map__cont_main-img5 {
+  position: absolute;
+  top: 25%;
+  left: 25%;
+  width: 7%;
+}
+.map__cont_main-img5:hover {
+  width: 9%;
+}
+.map__cont_main-img6 {
+  position: absolute;
+  top: 55%;
+  left: 10%;
+  width: 7%;
+}
+.map__cont_main-img6:hover {
+  width: 9%;
+}
+.map__cont_main-img7 {
+  position: absolute;
+  top: 21%;
+  left: 3%;
+  width: 7%;
+}
+.map__cont_main-img7:hover {
+  width: 9%;
+}
+.map__cont_main-img8 {
+  position: absolute;
+  top: 5%;
+  left: 37%;
+  width: 7%;
+}
+.map__cont_main-img8:hover {
+  width: 9%;
+}
+.map__cont_main-img9 {
+  position: absolute;
+  top: 6%;
+  left: 47%;
+  width: 7%;
+}
+.map__cont_main-img9:hover {
+  width: 9%;
+}
+.map__cont_main-img10 {
+  position: absolute;
+  top: -2%;
+  left: 55%;
+  width: 7%;
+}
+.map__cont_main-img10:hover {
+  width: 9%;
+}
+.map__cont_main-img11 {
+  position: absolute;
+  top: 10%;
+  left: 60%;
+  width: 7%;
+}
+.map__cont_main-img11:hover {
+  width: 9%;
+}
+.map__cont_main-img12 {
+  position: absolute;
+  top: 30%;
+  left: 65%;
+  width: 7%;
+}
+.map__cont_main-img12:hover {
+  width: 9%;
+}
+.map__cont_main-img13 {
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  width: 7%;
+}
+.map__cont_main-img13:hover {
+  width: 9%;
+}
+.map__cont_main-img14 {
+  position: absolute;
+  top: 3%;
+  left: 68%;
+  width: 7%;
+}
+.map__cont_main-img14:hover {
+  width: 9%;
+}
+.map__cont_main-img15 {
+  position: absolute;
+  top: 20%;
+  left: 88%;
+  width: 12%;
+}
+.map__cont_main-img15:hover {
+  width: 14%;
+}
+.map__cont_main-img16 {
+  position: absolute;
+  top: 40%;
+  left: 88%;
+  width: 7%;
+}
+.map__cont_main-img16:hover {
+  width: 9%;
+}
+.map__cont_main-img17 {
+  position: absolute;
+  top: 55%;
+  left: 38%;
+  width: 7%;
+}
+.map__cont_main-img17:hover {
+  width: 9%;
 }
 
 .footer {
@@ -443,7 +602,7 @@ ul li:hover ul li {
 }
 
 .reviews {
-  margin-top: 140px;
+  margin-top: 40px;
   background: url("http://arbitrium.org.ru/wp-content/uploads/2021/08/city-5716456-scaled.jpg");
 }
 .reviews__title {
