--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -1,3 +1,187 @@
 .map{
-    margin-top: 65px;
+    
+    &__cont{
+        &_main{
+            position: relative;
+            margin-top: 50px;
+            
+            &-img{
+                width: 100%;  
+            }
+            &-img1{
+                position: absolute;
+                top: 54%;
+                left: 52%;
+                width: 7%;
+                
+            }
+            &-img1:hover{
+                width: 9%;
+            }
+            &-img2{
+                position: absolute;
+                top: 55%;
+                right: 30%;
+                width: 7%;
+                
+            }
+            &-img2:hover{ 
+                right: 29%;
+                width: 9%;
+            }
+            &-img3{
+                position: absolute;
+                top: 70%;
+                left: 51%;
+                width: 9%;
+                
+            }
+            &-img3:hover{
+                left: 50%;
+                width: 11%;
+            }
+            &-img4{
+                position: absolute;
+                top: 10%;
+                left: 10%;
+                width: 7%;
+                
+            }
+            &-img4:hover{
+                width: 9%;
+            }
+            &-img5{
+                position: absolute;
+                top: 25%;
+                left: 25%;
+                width: 7%;
+                
+            }
+            &-img5:hover{
+                width: 9%;
+            }
+            &-img6{
+                position: absolute;
+                top: 55%;
+                left: 10%;
+                width: 7%;
+                
+            }
+            &-img6:hover{
+                width: 9%;
+            }
+            &-img7{
+                position: absolute;
+                top: 21%;
+                left: 3%;
+                width: 7%;
+                
+            }
+            &-img7:hover{
+                width: 9%;
+            }
+            &-img8{
+                position: absolute;
+                top: 5%;
+                left: 37%;
+                width: 7%;
+                
+            }
+            &-img8:hover{
+                width: 9%;
+            }
+            &-img9{
+                position: absolute;
+                top: 6%;
+                left: 47%;
+                width: 7%;
+                
+            }
+            &-img9:hover{
+                width: 9%;
+            }
+            &-img10{
+                position: absolute;
+                top: -2%;
+                left: 55%;
+                width: 7%;
+                
+            }
+            &-img10:hover{
+                width: 9%;
+            }
+            &-img11{
+                position: absolute;
+                top: 10%;
+                left: 60%;
+                width: 7%;
+                
+            }
+            &-img11:hover{
+                width: 9%;
+            }
+            &-img12{
+                position: absolute;
+                top: 30%;
+                left: 65%;
+                width: 7%;
+                
+            }
+            &-img12:hover{
+                width: 9%;
+            }
+            &-img13{
+                position: absolute;
+                top: 50%;
+                left: 80%;
+                width: 7%;
+                
+            }
+            &-img13:hover{
+                width: 9%;
+            }
+            &-img14{
+                position: absolute;
+                top: 3%;
+                left: 68%;
+                width: 7%;
+                
+            }
+            &-img14:hover{
+                width: 9%;
+            }
+            &-img15{
+                position: absolute;
+                top: 20%;
+                left: 88%;
+                width: 12%;
+                
+            }
+            &-img15:hover{
+                width: 14%;
+            }
+            &-img16{
+                position: absolute;
+                top: 40%;
+                left: 88%;
+                width: 7%;
+                
+            }
+            &-img16:hover{
+                width: 9%;
+            }
+            &-img17{
+                position: absolute;
+                top: 55%;
+                left: 38%;
+                width: 7%;
+                
+            }
+            &-img17:hover{
+                width: 9%;
+            }
+            
+            
+        }
+    }
 }
