--- a/projectReviews — копия/src/scss/reviews.scss
+++ b/projectReviews — копия/src/scss/reviews.scss
@@ -17,7 +17,8 @@
     &_img{
       width: 40%;
       float: left;
-      padding: 15px;
+      margin: 0 15px;
+      box-shadow: 0px 24px 24px rgba(0, 72, 109, 0.2);
     }
     &_text{
       line-height: 1.4em;
