--- a/projectServis/src/css/style.css
+++ b/projectServis/src/css/style.css
@@ -24,19 +24,19 @@ body {
   height: 100px;
   position: fixed;
   width: 100%;
-  background: url("/mainProject/src/img/bgMainDark.jpg");
-  z-index: 3;
+  background: url("/mainProject/src/img/bgMainDark.webp");
+  z-index: 2;
 }
 
 .header {
-  background: url("/mainProject/src/img/bgMainDark.jpg");
+  background: url("/mainProject/src/img/bgMainDark.webp");
 }
 .header_dark {
   padding-bottom: 110px;
 }
 .header #navigation {
   position: fixed;
-  z-index: 4;
+  z-index: 2;
   width: 1350px;
 }
 .header__contacts {
@@ -73,7 +73,7 @@ body {
 }
 .header__info-btn {
   margin-top: 20px;
-  background: #962715;
+  background-color: #962715;
   width: 480px;
   height: 70px;
   display: block;
@@ -87,18 +87,14 @@ body {
   padding: 10px;
   text-align: center;
   margin: 0 auto;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 .header__info-btn:hover {
   color: #962715;
-  background: white;
-  -webkit-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-  -webkit-transition-duration: 0.3s;
-          transition-duration: 0.3s;
-  -webkit-transition-property: -webkit-transform;
-  transition-property: -webkit-transform;
-  transition-property: transform;
-  transition-property: transform, -webkit-transform;
+  background-color: white;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 .header-nav {
   display: -webkit-box;
@@ -374,23 +370,26 @@ ul li:hover ul li {
 }
 
 .footer {
-  padding-top: 100px;
-  background: #010000;
+  position: relative;
+  margin-top: 50px;
+  padding-top: 10px;
+  background: #244f67;
 }
-.footer__info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-bottom: 10px;
-}
-.footer__info_img {
-  margin-right: 12px;
+.footer__copyright {
+  position: absolute;
+  background: #1b3c4d;
   width: 100%;
+  height: 50px;
+  text-align: center;
+  font-size: 15px;
+  color: #fff;
+  line-height: 2;
+  padding-top: 10px;
 }
 .footer__info_text {
+  margin: 15px 0;
+  padding: 0 15px;
+  width: 33%;
   margin-top: 30px;
   text-align: center;
   margin-left: 12px;
@@ -399,8 +398,67 @@ ul li:hover ul li {
 }
 .footer__info_text-item {
   font-size: 15px;
-  color: #FFF;
+  color: #fff;
   line-height: 2;
+}
+
+.footer__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+}
+.footer__inner-item {
+  margin: 20px;
+}
+.footer__inner-item_img-img {
+  max-width: 300px;
+}
+
+.back-to-top {
+  position: fixed;
+  right: 10px;
+  bottom: 200px;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border-radius: 50%;
+  background-color: rgba(36, 80, 103, 0.4509803922);
+  display: none;
+}
+
+.back-to-top:hover,
+.back-to-top:focus {
+  -webkit-filter: brightness(1.5);
+          filter: brightness(1.5);
+  outline: none;
+}
+
+.back-to-top::before,
+.back-to-top::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.back-to-top::before {
+  width: 5px;
+  height: 25px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  background-color: #fff;
+}
+
+.back-to-top::after {
+  width: 15px;
+  height: 15px;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+          transform: translate(-50%, -50%) rotate(45deg);
+  border-top: 5px solid #fff;
+  border-left: 5px solid #fff;
 }
 
 .reviews {
