--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,4 +1,4 @@
-.home {
+.home{
     padding-top: 10px;
     &__img {
       width: 550px;
@@ -68,13 +68,15 @@
   display: flex;
   flex-wrap: wrap;
   max-width: 100%;
-  margin: 0 auto;
+  margin: 0 auto; 
 }
 
 .grid-item{
   margin: 15px 0;
   padding: 0 15px;
   width: 33%;
+  height: 405px;
+
 }
 .grid-item__inner{
   position: relative;
@@ -84,6 +86,7 @@
 
   
 }
+
 .grid-item__img{
   width: 100%;
   height: 100%;
@@ -94,9 +97,9 @@
 .grid-item__inner:before{
   position: absolute;
   left: 0;
-  bottom: 0;
+  top: 0;
   width: 100%;
-  height: 60%;
+  height: 0%;
   background: #233a4dbb;
   content: '';
   transition: all .4s ease;
@@ -105,9 +108,9 @@
 .grid-item__inner:hover:before{
   position: absolute;
   left: 0;
-  bottom: 0;
+  top: 0;
   width: 100%;
-  height: 80%;
+  height: 100%;
   background: #233a4dbb;
   content: '';
   transition: all .4s ease;
@@ -118,6 +121,13 @@
   top: 140px;
   color: #fff;
   text-align: center;
+opacity: 0;
+  transition: all .4s ease;
+
+}
+.grid-item__inner:hover .grid-item__tittle{
+  opacity: 1;
+  transition: all .4s ease;
 
 }
 
