--- a/projectContacts/src/css/style.css
+++ b/projectContacts/src/css/style.css
@@ -24,12 +24,12 @@ body {
   height: 100px;
   position: fixed;
   width: 100%;
-  background: url("/mainProject/src/img/bgMainDark.webp");
+  background: url("../../../src/img/bgMainDark.webp");
   z-index: 2;
 }
 
 .header {
-  background: url("/mainProject/src/img/bgMainDark.webp");
+  background: url("../../../src/img/bgMainDark.webp");
 }
 .header_dark {
   padding-bottom: 110px;
@@ -328,7 +328,6 @@ ul li:hover ul li {
 }
 .contacts__info_contacts {
   color: #FFF;
-  font-family: Roboto, Sans-serif;
   font-size: 14px;
   font-weight: 900;
   line-height: 3.5;
@@ -354,6 +353,7 @@ ul li:hover ul li {
   text-align: center;
 }
 .form__input, .form__textarea {
+  resize: none;
   border: none;
   border-bottom: 1px solid #e1e1e1;
   font-size: 14px;
@@ -375,5 +375,15 @@ ul li:hover ul li {
   text-decoration: none;
   padding: 20px 0;
   border: none;
+  border-radius: 10px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: #b43e2b;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 /*# sourceMappingURL=style.css.map */
