--- a/projectLicensec/src/scss/header.scss
+++ b/projectLicensec/src/scss/header.scss
@@ -7,12 +7,12 @@
   height: 100px;
   position: fixed;
   width: 100%;
-  background: url('/mainProject/src/img/bgMainDark.webp');
+  background: url('../../../src/img/bgMainDark.webp');
   z-index: 3;
   
 }
 .header {
-  background: url('/mainProject/src/img/bgMainDark.webp');
+  background: url('../../../src/img/bgMainDark.webp');
   
   &_dark{
       
@@ -197,12 +197,14 @@ ul li:hover ul li{
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 15px 15px;
     
+    
   }
   
   
   .grid-item{
     overflow: hidden;
     height: 100%;
+    width: 100%;
     box-shadow: 0px 24px 24px #24506773;
   }
   
