--- a/projectServis/src/scss/home.scss
+++ b/projectServis/src/scss/home.scss
@@ -74,15 +74,15 @@
 }
 
 .grid-item{
-  overflow: hidden;
-  
-  padding: 15px;
-  width: 33.33%;
+  margin: 15px 0;
+  padding: 0 15px;
+  width: 33%;
+  height: 405px;
 }
 .grid-item__inner{
   position: relative;
   display: flex;
-  height: 100%;
+  height: 100%; 
   overflow: hidden;
   
 }
@@ -118,6 +118,10 @@
   font-size: 24px;
   color: rgb(255, 255, 255);
   z-index: 2;
+  opacity: 0;
+}
+.grid-item__inner:hover .grid-item__tittle{
+  opacity: 1;
 }
 .grid-item__inner:hover .grid-item__img{
   transform: scale(1.3);
