--- a/src/css/style.css
+++ b/src/css/style.css
@@ -210,7 +210,7 @@ ul li:hover ul li {
           transform: translateY(0px);
 }
 
-#down {
+.down {
   padding-bottom: 2px;
 }
 
@@ -296,6 +296,7 @@ ul li:hover ul li {
   margin: 15px 0;
   padding: 0 15px;
   width: 33%;
+  height: 405px;
 }
 
 .grid-item__inner {
@@ -320,9 +321,9 @@ ul li:hover ul li {
 .grid-item__inner:before {
   position: absolute;
   left: 0;
-  bottom: 0;
+  top: 0;
   width: 100%;
-  height: 60%;
+  height: 0%;
   background: rgba(35, 58, 77, 0.7333333333);
   content: "";
   -webkit-transition: all 0.4s ease;
@@ -332,9 +333,9 @@ ul li:hover ul li {
 .grid-item__inner:hover:before {
   position: absolute;
   left: 0;
-  bottom: 0;
+  top: 0;
   width: 100%;
-  height: 80%;
+  height: 100%;
   background: rgba(35, 58, 77, 0.7333333333);
   content: "";
   -webkit-transition: all 0.4s ease;
@@ -347,6 +348,15 @@ ul li:hover ul li {
   top: 140px;
   color: #fff;
   text-align: center;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.grid-item__inner:hover .grid-item__tittle {
+  opacity: 1;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 
 .grid-item__hidden {
@@ -715,6 +725,122 @@ ul li:hover ul li {
           transform: translate(-50%, -50%) rotate(45deg);
   border-top: 5px solid #fff;
   border-left: 5px solid #fff;
+}
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 450px;
+  margin: 0 auto;
+  text-align: center;
+}
+.form__input, .form__textarea {
+  resize: none;
+  border: none;
+  border-bottom: 1px solid #e1e1e1;
+  font-size: 14px;
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 10px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+.form__input:focus, .form__textarea:focus {
+  outline: none;
+  border-bottom: 1px solid #131313;
+}
+
+.btn {
+  color: #fff;
+  background-color: #962715;
+  font-size: 16px;
+  text-decoration: none;
+  padding: 20px 0;
+  border: none;
+  border-radius: 10px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: #b43e2b;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(36, 80, 103, 0.6901960784);
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  display: none;
+}
+.overlay .popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 700px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background: #fff;
+  padding: 20px;
+  border-radius: 20px;
+  display: none;
+}
+
+.wrapper {
+  text-align: center;
+}
+
+.popup-close {
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  top: -25px;
+  right: -25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+.popup-close__line {
+  position: relative;
+  width: 100%;
+  height: 2px;
+}
+.popup-close__line::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+.popup-close__line::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 .reviews {
