--- a/projectAbout/src/scss/header.scss
+++ b/projectAbout/src/scss/header.scss
@@ -159,7 +159,7 @@ ul li a{
     text-align: left;
 }
 ul li ul{
-    background-color: #961515a8;
+    background-color: #961515;
     margin-left: 20px;
     position: absolute;
     width: 400px;
