--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -184,3 +184,15 @@
         }
     }
 }
+
+.ym-advanced-informer{
+    width: 88px;
+    height: 31px;
+    border: 0;
+z-index: 9;
+position: relative;
+box-sizing: border-box;
+max-width: 100%;
+height: auto;
+vertical-align: middle;
+}
