--- a/projectServis/projectServis9/src/css/style.css
+++ b/projectServis/projectServis9/src/css/style.css
@@ -455,3 +455,12 @@ span {
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
 }
+#service-content {
+  background-image: linear-gradient( to bottom, rgb(9 39 57 / 87%), rgb(9 39 57 / 87%) ), url("../img/6.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color:#FFF !important;
+}
+#service-content_title {
+  color:#FFF !important;
+}
