--- a/projectAbout/src/css/style.css
+++ b/projectAbout/src/css/style.css
@@ -52,6 +52,19 @@ body {
   text-decoration: none;
   color: #ffffff;
 }
+.header__contacts2 {
+  text-align: end;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 13px;
+  color: #ffffff;
+  padding-top: 15px;
+  display: none;
+}
+.header__contacts2_item {
+  text-decoration: none;
+  color: #ffffff;
+}
 .header__info {
   padding-top: 60px;
   text-align: center;
