--- a/projectContacts/src/scss/header.scss
+++ b/projectContacts/src/scss/header.scss
@@ -39,6 +39,21 @@
         }
         
     }
+    &__contacts2{
+        
+        text-align: end;
+        font-family: "Open Sans",sans-serif;
+        font-weight: 500;
+        font-size: 13px;
+        color: #ffffff;
+        padding-top: 15px;
+        display: none;
+        &_item{
+            text-decoration: none;
+            color: #ffffff;
+        }
+        
+    }
     &__info {
         padding-top: 60px;
         text-align: center;
