--- a/projectLicensec/projectNorm/src/css/style.css
+++ b/projectLicensec/projectNorm/src/css/style.css
@@ -41,6 +41,19 @@ body {
   z-index: 2;
   width: 1350px;
 }
+.header__contacts2 {
+  text-align: end;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 500;
+  font-size: 13px;
+  color: #ffffff;
+  padding-top: 15px;
+  display: none;
+}
+.header__contacts2_item {
+  text-decoration: none;
+  color: #ffffff;
+}
 .header__contacts {
   text-align: end;
   font-family: "Open Sans", sans-serif;
