--- a/projectServis/projectServis9/src/scss/home.scss
+++ b/projectServis/projectServis9/src/scss/home.scss
@@ -2,7 +2,7 @@
     padding: 40px;
     &__text{
         text-align: center;
-        color: #1E1E20;
+        color: #e4e4e4;
         padding-bottom: 30px;
         font-family: "Roboto Condensed",Sans-serif;
         font-size: 30px;
